<resources>
    <string name="app_name">Skin Health</string>

    // Used for detection
    <string name="btn_detect">Detect</string>
    <string name="btn_choose_image">Upload</string>
    <string name="btn_reset">Reset</string>
    <string name="tv_count">Pimples:</string>
    <string name="tv_percentage">Percentage:</string>
    <string name="tv_level">Acne Level:</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in_short">Register</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="welcome">"Welcome "</string>
    <string name="text_username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">admin</string>
    <string name="nav_header_subtitle">dreamteam@mailforspam.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="info_text">Skin Health helps to detect amount of acne on your face and recommends procedures suitable for you</string>
    <string name="text_loading">Loading…</string>
    <string name="current_stats_title">Current statistics: </string>
    <string name="last_upd_title">Last updated: </string>
    <string name="date_and_time">01.01.1970, 00:00</string>
    <string name="num_of_pimples_title">Acne percentage: </string>
    <string name="damage_text">Acne level:</string>
    <string name="num_of_pimples">100</string>
    <string name="diet_title">Recommended diet</string>
    <string name="product_title">Recommended skin care products</string>
    <string name="text_date_select">Select your date of birth:</string>

    <string name="damage_level_unknown">Unknown</string>
    <string name="damage_level_mild">Mild</string>
    <string name="damage_level_mildmoderate">Mild-Moderate</string>
    <string name="damage_level_moderate">Moderate</string>
    <string name="damage_level_severe">Severe</string>

    <string name="menu_home">SkinHealth</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="choose_the_way">Choose the way to upload an image</string>
    <string name="take_a_new_photo">Camera</string>
    <string name="upload_from_gallery">Gallery</string>
    <string name="account">Account</string>
    <string name="useful_articles">Useful articles</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="contact">Contact us</string>
    <string name="logout">Log out</string>
    <string name="string_signup">Sign up</string>
    <string name="logo_img">Logo Image</string>
    <string name="diet_picture">diet picture</string>
    <string name="product_image">product image</string>
    <string name="text_already_account">Already have an account?</string>
    <string name="text_login_here">Login here</string>
    <string name="camera_button">camera button</string>
    <string name="title_activity_diet_scrolling">Recommended diet</string>
    <string name="mild_diet">Drink enough water (normally 6-8 glasses per day)\nInclude healthy fats (avocado, oily fish)\n
        Minimize milk products\nInclude enough Omega-3and Omega-6 products (chia seeds, oily fish, rapeseed oil, walnuts)\n
        Eat more low glycaemic index carbs (beans, pulses, porridge, and other low-GI)\n
        Reduce high glycaemic index carbs (sugar, sugary drinks, chocolate, cookies, and others)</string>
    <string name="mild_mod">Drink enough water (normally 6-8 glasses)\nInclude healthy fats (avocado, oily fish)
        \nInclude enough Omega-3and Omega-6 products (chia seeds, oily fish, rapeseed oil, walnuts)
        \nEat more low glycaemic index carbs (beans, pulses, porridge, and other low-GI)
        \nReduce high glycaemic index carbs (sugar, sugary drinks, chocolate, cookies,fastfood, and others)
        \nReduce lactose (milk products)</string>
    <string name="moderate">It is highly recommended to see a therapist and dermatologist\n
        Drink enough water (normally 6-8 glasses per day)
        \nInclude healthy fats (avocado, oily fish)
        \nInclude enough Omega-3and Omega-6 products (chia seeds, oily fish, rapeseed oil, walnuts)
        \nEat more low glycaemic index carbs (beans, pulses, porridge, and other low-GI)
        \nExclude high glycaemic index carbs </string>
    <string name="severe">You should see the doctors: therapist, dermatologist, endocrinologist, cosmetologist\n
        Drink enough water (normally 6-8 glasses)\n
        Include healthy fats (avocado, oily fish)\n
        Include enough Omega-3and Omega-6  products (chia seeds, oily fish, rapeseed oil, walnuts)\n
        Eat more low glycaemic index carbs (beans, pulses, porridge, and other low-GI)\n
        Exclude high glycaemic index carbs  \n(sugar, chocolate, fastfood, and others)</string>
    <string name="title_activity_skin">SkinActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>