<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/happyBroccoli"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_weight="1"
        app:srcCompat="@drawable/main_background___transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/statsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_stats_title"
                android:textSize="@dimen/dimen_stats_title_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/updatedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/last_upd_title"
                    android:textSize="@dimen/dimen_last_updated_text_size"
                    app:layout_constraintTop_toBottomOf="@+id/statsTitle"
                    tools:layout_editor_absoluteX="31dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/date_and_time"
                    android:textSize="@dimen/dimen_last_updated_text_size"
                    app:layout_constraintStart_toEndOf="@+id/updatedTitle"
                    app:layout_constraintTop_toBottomOf="@+id/statsTitle" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <!--Pimples        -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/pimplesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:gravity="center"
                        android:text="@string/num_of_pimples_title"
                        android:textSize="@dimen/dimen_pimples_text_size"
                        tools:layout_editor_absoluteX="34dp"
                        tools:layout_editor_absoluteY="395dp" />

                    <TextView
                        android:id="@+id/numOfPimles"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/berlin_sans_fb_regular"
                        android:gravity="center"
                        android:text="@string/num_of_pimples"
                        android:textAlignment="center"
                        android:textColor="@color/medium_green"
                        android:textSize="@dimen/dimen_pimples_amount_size"
                        app:layout_constraintTop_toBottomOf="@+id/pimplesTitle" />

                </LinearLayout>

                <!--Damage        -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/damageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:gravity="center"
                        android:text="@string/damage_text"
                        android:textSize="@dimen/dimen_pimples_text_size"
                        tools:layout_editor_absoluteX="241dp"
                        tools:layout_editor_absoluteY="388dp" />

                    <TextView
                        android:id="@+id/damageLevel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/berlin_sans_fb_regular"
                        android:gravity="center"
                        android:text="@string/damage_level"
                        android:textColor="@color/medium_green"
                        android:textSize="@dimen/dimen_pimples_amount_size"
                        app:layout_constraintTop_toBottomOf="@+id/damageTitle"
                        tools:layout_editor_absoluteX="241dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recommendationDiet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    app:cardBackgroundColor="@color/light_green"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="99dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/berlin_sans_fb_regular"
                            android:text="@string/diet_title"
                            android:textSize="@dimen/dimen_diet_text_size">
                        </TextView>
                        <ImageView
                            android:id="@+id/dietImage"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/diet_picture"


                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/diet" />


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recommendationProds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    app:cardBackgroundColor="@color/light_green"
                    app:cardCornerRadius="18dp"

                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal"

                        >

                        <TextView
                            android:layout_width="114dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/berlin_sans_fb_regular"
                            android:text="@string/product_title"
                            android:textSize="@dimen/dimen_diet_text_size">

                        </TextView>

                        <ImageView
                            android:id="@+id/productImage"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/product_image"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/skin_care" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/button_main"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/choose_the_way"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo" />
            </FrameLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="311dp"
                android:layout_height="421dp"
                android:layout_marginStart="162dp"
                android:layout_marginTop="204dp"
                android:layout_marginEnd="153dp"
                android:layout_marginBottom="57dp"
                android:src="@drawable/account"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


