<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/background_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/info_text"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/start_version_4" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text_login"
        app:layout_constraintVertical_bias="0.85">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/text_bg"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/text_bg"
            android:fontFamily="@font/berlin_sans_fb_regular"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/berlin_sans_fb_regular"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"

            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_text_login"
        android:layout_width="357dp"
        android:layout_height="81dp"
        android:fontFamily="@font/berlin_sans_fb_regular"
        android:text="@string/action_sign_in_short"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

</androidx.constraintlayout.widget.ConstraintLayout>